# hatch-conda-build

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
hatch_conda_build/: plugin.py
src/hatch_conda_build/: plugin.py
tests/: conftest.py  test_builder.py  test_hatch.py
